k8s/cats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats
  template:
    metadata:
      labels:
        app: cats
    spec:
      containers:
        - name: cats
          image: cats
---
apiVersion: v1
kind: Service
metadata:
  name: cats-srv
spec:
  selector:
    app: cats
  ports:
    - name: cats
      protocol: TCP
      port: 5000
      targetPort: 5000
