k8s/dogs-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogs-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dogs
  template:
    metadata:
      labels:
        app: dogs
    spec:
      containers:
        - name: dogs
          image: dogs
---
apiVersion: v1
kind: Service
metadata:
  name: dogs-srv
spec:
  selector:
    app: dogs
  ports:
    - name: dogs
      protocol: TCP
      port: 6000
      targetPort: 6000
